Implement `GeneDispatcher`